Changes to svg files

--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -34,7 +34,8 @@
             android:id="@+id/tracking_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tracking_mode"
+            android:text="
+            "
             android:textAllCaps="true"
             android:textSize="12sp"
             android:background="?android:attr/selectableItemBackground"
