--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -19,6 +19,12 @@
             opencv:camera_id="back"
             opencv:show_fps="false" />
 
+        <uk.ac.ed.faizan.objecttracker.TemplateSelection
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/select_template"
+            android:visibility="invisible"/>
+
     </FrameLayout>
 
     <RelativeLayout
@@ -83,6 +89,8 @@
             android:background="?android:attr/selectableItemBackground"
             android:text="@string/freeze_disabled"
             android:textSize="10sp"
+            android:enabled="false"
+            android:alpha="0.5"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:drawablePadding="-12dp"
