Added runtime permissions for API > 23.
Code is added in onResume() method of TrackingActivity - permissions are checked each time this tracking activity is resumed. Tested a little bit and seems fine, but do more testing.

--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -57,6 +57,7 @@
             android:text="@string/set_color"
             android:textAllCaps="false"
             android:textSize="10sp"
+            android:enabled="true"
             android:textColor="@android:color/white"
             android:drawablePadding="-12dp"
             android:layout_marginBottom="-4dp"
@@ -89,7 +90,8 @@
             android:background="?android:attr/selectableItemBackground"
             android:text="@string/freeze_disabled"
             android:textSize="10sp"
-            android:enabled="false"
+            android:enabled="true"
+            android:visibility="visible"
             android:alpha="0.5"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
