--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -27,6 +27,61 @@
             android:visibility="invisible"/>
     </FrameLayout>
 
+
+    <RelativeLayout
+
+        android:id="@+id/toolbar_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:id="@+id/timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/camera_ui_horizontal_margin"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:text="@string/timestamp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white" />
+
+        <ImageView
+            android:id="@+id/record_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_toStartOf="@id/timestamp"
+            android:clickable="true"
+            android:src="@drawable/ic_record"/>
+
+        <SeekBar
+            android:id="@+id/camerazoom"
+            android:progressBackgroundTint="@android:color/white"
+            android:progressTint="@android:color/white"
+            android:thumbTint="@android:color/darker_gray"
+            android:layout_centerInParent="true"
+            android:layout_alignParentEnd="true"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"/>
+    </RelativeLayout>
+
+
+    <TextView
+        android:id="@+id/storage_space"
+        android:paddingTop="16dp"
+        android:textSize="15sp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:textColor="@android:color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"/>
+
     <RelativeLayout
         android:paddingTop="8dp"
         android:paddingLeft="-12dp"
@@ -99,61 +154,14 @@
             android:layout_marginBottom="-4dp"
             android:layout_below="@id/flash_button"/>
 
-
         <SurfaceView
             android:id="@+id/transparent_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"/>
-    </RelativeLayout>
-
-
-    <RelativeLayout
-
-        android:id="@+id/toolbar_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin">
-
-        <TextView
-            android:id="@+id/timestamp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/camera_ui_horizontal_margin"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
-            android:text="@string/timestamp"
-            android:textAppearance="?android:textAppearanceMedium"
-            android:textColor="@android:color/white" />
-
-        <ImageView
-            android:id="@+id/record_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_toStartOf="@id/timestamp"
-            android:clickable="true"
-            android:src="@drawable/ic_record"/>
 
     </RelativeLayout>
-
-
-    <TextView
-        android:id="@+id/storage_space"
-        android:paddingTop="16dp"
-        android:textSize="15sp"
-        android:paddingEnd="16dp"
-        android:paddingStart="16dp"
-        android:textColor="@android:color/white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"/>
-
 
 
 </RelativeLayout>
