[ISSUE #1] Allow to change modes during template initialization
Made an enhancement such that if template initialization procedure has started, the user now has the ability to cancel. This could be useful if automatic tracking was selected by accident, and the user wishes to change to manual. Previously, the user would have to set a template, record, and then cancel to be able to switch to manual.

--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -68,9 +68,24 @@
             android:layout_height="wrap_content"/>
     </RelativeLayout>
 
+    <Button
+        android:paddingTop="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/template_initialization_cancel"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:textAllCaps="true"
+        android:textSize="12sp"
+        android:background="?android:attr/selectableItemBackground"
+        android:textColor="@android:color/white"
+        android:visibility="invisible"
+        android:text="Cancel Initialization"/>
+
 
 
     <LinearLayout
+        android:paddingTop="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
