--- a/app/src/main/res/menu/tracking_type_menu.xml
+++ b/app/src/main/res/menu/tracking_type_menu.xml
@@ -4,7 +4,7 @@
 
     <group
         android:checkableBehavior="single"
-        android:id="@+id/test">
+        android:id="@+id/tracking_mode">
         <item
             android:id="@+id/manual"
             android:title="@string/manual_tracking"/>
@@ -14,6 +14,5 @@
             android:title="@string/automatic_tracking" />
     </group>
 
-        <item android:id="@+id/help"
-              android:title="@string/help"/>
+
 </menu>
