--- a/app/src/main/res/layout/tracking_mode_help_layout.xml
+++ b/app/src/main/res/layout/tracking_mode_help_layout.xml
@@ -60,6 +60,23 @@
             android:textColor="@android:color/white"
             android:text="@string/help_dialog_matching_methods_desc"/>
 
+        <TextView
+            android:layout_marginTop="16dp"
+            android:padding="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textColor="@android:color/white"
+            android:text="@string/help_dialog_tips_and_tricks"/>
+
+        <TextView
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:text="@string/help_dialog_tips_and_tricks_desc"/>
+
 
 
     </LinearLayout>
