Now reading from sharedPreferences to set default tracking/matching method.
Also fixed some bugs with UI elements not being updated when activity was paused. I am now calling releaseMediaRecorder() in TrackingActivity.onPause(), and releaseMediaRecorder() sets the UI icons by calling reconfigureUI method.

--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -112,8 +112,7 @@
             android:textSize="12sp"
             android:paddingEnd="16dp"
             android:paddingStart="16dp"
-            android:textColor="@android:color/white"
-            android:text="@string/tracking_mode_text"/>
+            android:textColor="@android:color/white"/>
     </LinearLayout>
 
 
