Changed color of help background to one solid color.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,5 @@
     <color name="colorViewRecordingsGradEnd">#ff6d00</color>
 
     <!-- Camera Preview colours -->
-    <color name="cameraFrameColor">#111111</color>
+    <color name="helpBackground">#2196f3</color>
 </resources>
