--- a/app/src/main/res/layout/tracking_mode_help_layout.xml
+++ b/app/src/main/res/layout/tracking_mode_help_layout.xml
@@ -8,7 +8,7 @@
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:background="@drawable/gradient_background">
+                  android:background="@color/helpBackground">
 
         <TextView
             android:padding="16dp"
