Added debug activity to test sensors.
This new debug activity allows user to select which sensor they wish to
debug, and a number of iterations to poll that sensor for. The sensor data
is then appended to a yml file for the number of iterations, at the
fastest possible polling speed. This is useful for doing noise
evaluations, etc.

--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -25,4 +25,10 @@
         android:id="@+id/view_recordings_button"
         android:drawableStart="@drawable/ic_viewrecording_tablet_landscape" />
 
+    <Button
+        android:id="@+id/debug_button"
+        style="@style/debug_button"
+        android:drawableStart="@drawable/ic_preferences_tablet_landscape" />
+
+
 </LinearLayout>
