--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,5 +25,10 @@
         style="@style/view_recordings_button"
         android:drawableStart="@drawable/ic_viewrecording" />
 
+    <Button
+        android:id="@+id/debug_button"
+        style="@style/debug_button"
+        android:drawableStart="@drawable/ic_preferences" />
+
 
 </LinearLayout>
