--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,10 @@
     <color name="colorViewRecordingsGradStart">#ffab40</color>
     <color name="colorViewRecordingsGradEnd">#ff6d00</color>
 
+
+    <color name="colorDebugStart">#40a9ff</color>
+    <color name="colorDebugEnd">#2e63a3</color>
+
     <!-- Camera Preview colours -->
     <color name="helpBackground">#2196f3</color>
 </resources>
