--- a/app/src/main/res/layout/activity_debug.xml
+++ b/app/src/main/res/layout/activity_debug.xml
@@ -1,112 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_debug"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="uk.ac.ed.faizan.objecttracker.DebugActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/debug_info"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/activity_debug"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="@string/debug_text"/>
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="uk.ac.ed.faizan.objecttracker.DebugActivity">
+
+        <TextView
+            android:id="@+id/debug_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:text="@string/debug_text"/>
 
 
 
-    <RadioGroup
-        android:id="@+id/radio_buttons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/debug_info"
-        android:checkedButton="@+id/gyroscope_button">
+        <RadioGroup
+            android:id="@+id/radio_buttons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/debug_info"
+            android:checkedButton="@+id/gyroscope_button">
 
-        <RadioButton
+            <RadioButton
+                android:layout_marginTop="@dimen/default_slider_margin_btw_title"
+                android:id="@+id/gyroscope_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gyroscope"/>
+
+            <RadioButton
+                android:id="@+id/gravity_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gravitational Sensor"/>
+
+            <RadioButton
+                android:id="@+id/accelerometer_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Accelerometer"/>
+        </RadioGroup>
+
+        <TextView
             android:layout_marginTop="@dimen/default_slider_margin_btw_title"
-            android:id="@+id/gyroscope_button"
+            android:id="@+id/iteration_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Gyroscope"/>
+            android:layout_below="@id/radio_buttons"
+            android:text="Number of times to poll"/>
 
-        <RadioButton
-            android:id="@+id/gravity_button"
+
+        <EditText
+            android:id="@+id/number_of_times"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Gravitational Sensor"/>
+            android:text="500"
+            android:inputType="number"
+            android:layout_below="@id/iteration_header"/>
 
-        <RadioButton
-            android:id="@+id/accelerometer_button"
+        <TextView
+            android:layout_marginTop="@dimen/default_slider_margin_btw_title"
+            android:id="@+id/frequency_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Accelerometer"/>
-    </RadioGroup>
+            android:layout_below="@id/number_of_times"
+            android:text="Polling Frequency"/>
 
-    <TextView
-        android:layout_marginTop="@dimen/default_slider_margin_btw_title"
-        android:id="@+id/iteration_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/radio_buttons"
-        android:text="Number of times to poll"/>
+        <Spinner
+            android:id="@+id/polling_frequency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/frequency_header"
+            android:entries="@array/debug_polling_frequency_entries"/>
 
-
-    <EditText
-        android:id="@+id/number_of_times"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="500"
-        android:inputType="number"
-        android:layout_below="@id/iteration_header"/>
-
-    <TextView
-        android:layout_marginTop="@dimen/default_slider_margin_btw_title"
-        android:id="@+id/frequency_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/number_of_times"
-        android:text="Polling Frequency"/>
-
-    <Spinner
-        android:id="@+id/polling_frequency"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/frequency_header"
-        android:entries="@array/debug_polling_frequency_entries"/>
-
-    <EditText
-        android:visibility="invisible"
-        android:id="@+id/userdefined_polling"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="100000"
-        android:inputType="number"
-        android:layout_below="@id/polling_frequency"/>
+        <EditText
+            android:visibility="invisible"
+            android:id="@+id/userdefined_polling"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100000"
+            android:inputType="number"
+            android:layout_below="@id/polling_frequency"/>
 
 
 
-    <Button
-        android:layout_marginTop="@dimen/default_slider_margin_btw_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start Polling"
-        android:layout_below="@+id/userdefined_polling"
-        android:layout_alignParentStart="true"
-        android:id="@+id/start_debug"/>
+        <Button
+            android:layout_marginTop="@dimen/default_slider_margin_btw_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start Polling"
+            android:layout_below="@+id/userdefined_polling"
+            android:layout_alignParentStart="true"
+            android:id="@+id/start_debug"/>
 
 
-    <TextView
-        android:layout_marginTop="@dimen/default_slider_margin_btw_title"
-        android:id="@+id/progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/start_debug"/>
+        <TextView
+            android:layout_marginTop="@dimen/default_slider_margin_btw_title"
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/start_debug"/>
 
 
 
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
