Created a UI tutorial for tracker

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="colorViewRecordingsGradStart">#ffab40</color>
     <color name="colorViewRecordingsGradEnd">#ff6d00</color>
 
+    <color name="showcaseView">#333333</color>
+
 
     <!-- Camera Preview colours -->
     <color name="helpBackground">#2196f3</color>
